# OptimalFlow

./: .gitignore  CMakeLists.txt  README.md  export.sh  main.cpp  mbed_app.json  udp_client.py
ethernet_communication/: CMakeLists.txt
ethernet_communication/include/: crc.h  udp_server.h
ethernet_communication/src/: crc.cpp  udp_server.cpp
imu_handler/: CMakeLists.txt
imu_handler/include/: imu_handler.h
imu_handler/src/: imu_handler.cpp
linear_encoder_handler/: CMakeLists.txt
linear_encoder_handler/include/: linear_encoder_handler.h
linear_encoder_handler/src/: linear_encoder_handler.cpp
